operators/nexus/route-nexus-mgmt.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nexus-mgmt
  namespace: nexus
  labels:
    app.kubernetes.io/managed-by: Helm
  managedFields:
    - manager: Mozilla
      operation: Update
      apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:metadata':
          'f:labels':
            .: {}
            'f:app.kubernetes.io/managed-by': {}
        'f:spec':
          'f:host': {}
          'f:port':
            .: {}
            'f:targetPort': {}
          'f:tls':
            .: {}
            'f:termination': {}
          'f:to':
            'f:kind': {}
            'f:name': {}
            'f:weight': {}
          'f:wildcardPolicy': {}
    - manager: openshift-router
      operation: Update
      apiVersion: route.openshift.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        'f:spec':
          'f:tls':
            'f:caCertificate': {}
            'f:certificate': {}
            'f:key': {}
        'f:status':
          'f:ingress': {}
spec:
  host: nexus-mgmt.apps.edge.aliveagain.me
  to:
    kind: Service
    name: nexus-sonatype-nexus-service
    weight: 100
  port:
    targetPort: application
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFTzCCBDegAwIBAgISBOEUPhxhYFpeLbhPtjArWfrxMA0GCSqGSIb3DQEBCwUA
[...]
      qk1/W1LUbVskgndpjyRU4siYWA==
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN PRIVATE KEY-----
      MIIEvgIBADANBgkqhkiG9w0BAQEFAASCBKgwggSkAgEAAoIBAQDfIK4d9RiKvyCH
[...]
      OoPUW0aVASO23dp9gblcoItR
      -----END PRIVATE KEY-----
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
[...]
      nLRbwHOoq7hHwg==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/
[...]
      Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
      -----END CERTIFICATE-----
  wildcardPolicy: None
